# contracts-sui

./: .coderabbit.yaml  .gitignore  .prettierrc  .typos.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  STYLEGUIDE.md  codecov.yml  llms.txt  package-lock.json
.claude/commands/: code-quality.md
.github/: copilot-instructions.md  pull_request_template.md
.github/schemas/: llm-security-scan.schema.json
.github/workflows/: llm-security-scan.yml  llms-schema-validation.yml  test.yml
audits/: README.md
codegen/: pyproject.toml
codegen/cdf/: derive.py  emit_test_vectors.py
codegen/shared/: move_emit.py  reference.py
collections/: Move.toml  README.md
collections/big_sorted_map/: Move.toml  README.md
collections/sorted_map/: Move.toml  README.md
collections/sorted_set/: Move.toml  README.md
collections/sources/: big_sorted_map.move  random.move  skip_list.move  skip_list_u128.move  skip_list_u64.move  sorted_map.move  (+1 more)
contracts/: EXAMPLES.md  README.md
llms/: index.yaml
math/: README.md
math/fixed_point/codegen/: Makefile  README.md  pyproject.toml
math/fixed_point/codegen/cdf/: derive.py  emit_coefficients.py  emit_test_vectors.py  validate.py
math/fixed_point/codegen/shared/: constants.py  move_emit.py  reference.py
math/fixed_point/codegen/tests/: test_emit.py  test_shared.py  test_validate_mirror.py
post-core/: basic-review.md  btt-coverage.md
rate-limiter/: 03-invariants.md  spec.md
schemas/: llms-metadata-v1.json  llms-package-index-v1.json
scratchpad/: destroy-curve-agnostic.md
scripts/: run_ptb.py  validate-llms-completeness.py  validate-llms-schema.py  validate-llms-semantics.py
scripts/gaussian_codegen/: .gitignore  Makefile  README.md  pyproject.toml
scripts/gaussian_codegen/cdf/: .derive_output.json  derive.py  emit_coefficients.py  emit_test_vectors.py  validate.py
scripts/gaussian_codegen/inverse_cdf/: .derive_output.json  derive.py  emit_coefficients.py  emit_test_vectors.py  validate.py
scripts/gaussian_codegen/pdf/: .derive_output.json  derive.py  emit_coefficients.py  emit_test_vectors.py  validate.py
scripts/gaussian_codegen/shared/: aaa.py  accuracy.py  arithmetic.py  constants.py  fit.py  gates.py  move_emit.py  reference.py  refit.py  rounding_optimize.py
scripts/gaussian_codegen/tests/: test_emit.py  test_fit_accuracy.py  test_inverse_cdf.py  test_pdf.py  test_rounding_optimize.py  test_shared.py  test_validate_mirror.py
sorted-map/: 01-research.md
vesting-wallet-artifacts/: invariants.md  tests.md
(+551 files in other folders)
