[project]
name = "openzeppelin-fp-codegen"
version = "0.1.0"
description = "Offline coefficient and test-vector generators for openzeppelin_fp_math (Sui Move)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mpmath>=1.3",
    "scipy>=1.13",
    "numpy>=1.26",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["codegen*"]
